added extra button

--- a/app/clients/extjs-phoenix-2/resources/css/app.css
+++ b/app/clients/extjs-phoenix-2/resources/css/app.css
@@ -22,6 +22,10 @@
     background: url('../icons/copy.png');
 }
 
+.support-icon {
+    background: url('../icons/support.png');
+}
+
 .editorWithMargin {
     margin-top: 4px;
 }
