changes to extjs-phoenix

--- a/app/clients/extjs-phoenix-2/resources/css/app.css
+++ b/app/clients/extjs-phoenix-2/resources/css/app.css
@@ -160,3 +160,11 @@ body .ux-notification-error {
     padding: 6px 4px;
     white-space: nowrap;
 }
+
+.body-panel-gray {
+    background-color: grey;
+}
+
+/*.body-panel-gray .x-form-item-body {
+    width: '140px' !important;
+}*/
