added bunch of changes and good updates

--- a/app/clients/interactjs-1/style.css
+++ b/app/clients/interactjs-1/style.css
@@ -9,10 +9,10 @@
 
 .dropzone {
   position: relative;
-  top: 55.4%;
+  top: 51.8%;
   background-color: #E0E0E0;
   width: 46em;
-  height: 13.4em;
+  height: 14.6em;
   border: dashed 1em transparent;
   z-index: -1;
   vertical-align: bottom;
@@ -20,13 +20,16 @@
 
 .draggable {
   border-radius: 1em;
-  width: 3.8em;
-  height: 3.8em;
+  width: 3.6em;
+  height: 3.6em;
   float:left;
   background-color: #2196F3;
   color: white;
   padding: 0.5em;
-  margin: 0.6em;
+  margin-left: 0.4em;
+  margin-right: 0.4em;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
 }
 
 .a-space {
@@ -53,18 +56,21 @@
 
 .extras {
   border-radius: 1em;
-  width: 3.8em;
-  height: 3.8em;
+  width: 3.6em;
+  height: 3.6em;
   float:left;
   background-color: #2196F3;
   color: white;
   padding: 0.5em;
-  margin: 0.6em;
+  margin-left: 0.4em;
+  margin-right: 0.4em;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
 }
 
 .icon-image {
-  width: 4em;
-  height: 4em;
+  width: 3.8em;
+  height: 3.8em;
 }
 
 .imagezone {
@@ -81,15 +87,16 @@
 #zone-image {
   width: 11em;
   height: 11em;
+  z-index: 10;
 }
 
 .messagezone {
   position: relative;
-  top: 49.4%;
+  top: 43.4%;
   left: 78.5%;
   background-color: #CACADA;
   width: 12.6em;
-  height: 1.7em;
+  height: 2.5em;
   border: dashed 0.1em transparent;
   padding: 0.1em;
   z-index: 1;
@@ -100,4 +107,26 @@
   position: absolute;
   z-index: 2;
   font-size: 0.7em;
+}
+
+.plate {
+  position: relative;
+  width: 6.3em;
+  height: 13.2em;
+  opacity: 0.05;
+  z-index: 1;
+}
+
+#leftplate {
+  position: relative;
+  top: -5.0%;
+  left: 78.7%;
+  background-color: #35AAF8;
+}
+
+#rightplate {
+  position: relative;
+  top: -43.8%;
+  left: 89.5%;
+  background-color: #211113;
 }
